Change Log for OpenXava project
===============================

- Custom JPA EntityManagerFactory creation with entityManagerFactoryProviderClass in xava.properties.
- default-controllers-ext.xml / controladores-defecto-ext.xml to define controllers in libraries/frameworks.
- All Java code of openxava core framework converted to UTF-8 encoding.
- Number of row actions to show a popup is configurable via rowActionsPopupThreshold in xava.properties.
- Hot code reloading for development including entities, actions, controllers, modules, annotations, etc.
- AppServer launcher class has a new method run(application, extraClassPaths) to indicate extra classpaths.
- Java 11 as default compiler level for new projects (from archetypes), though Java 1.8 is still supported. 
- Video for creating a CRM included in the project templates documentation article.
- Lesson 10 of the reporting course with JasperReports available in the documentation with video.
- Some new common use labels to be used in applications.

OpenXava 7.4.5 (2025-1-10)
--------------------------
- New filterByContentInAnyProperty() method in Tab to filter for a string value in any column.
- New isJavaIdentifier() method in Strings utility class.
- Works nicely with core OpenXava code using Visual Studio Code, including running the openxavatest suite.
- Log4j API and core upgraded to 2.24.3.
- Jersey client, hk2 and media upgraded to 2.46.
- Json upgraded to 20241224.
- JSoup upgraded to 1.18.3.
- Embedded Tomcat used in development upgraded to 9.0.98.
- Driver version in doc/new projects upgraded for AS/400.
- Lessons 8 and 9 of the reporting course with JasperReports available in the documentation with video.
- Fixed 1 security vulnerability in dependencies, now we have 0 vulnerabilities.
- Fix: XSS vulnerability using script injection in module URL parameters. 
- Fix: Content-Security-Policy error in browser console related to javascript:void(0) in some modules.