@@ -18588,9 +18588,10 @@ class="sy0">&gt;</span> elementos<span class="sy0">;</span></pre>
   pathProperty=<span class="st0">"path"</span>,        <span class="co1">// 3</span>
   idProperties=<span class="st0">""</span>,            <span class="co1">// 4</span>
   initialExpandedState=<span class="kw4">true</span>,  <span class="co1">// 5</span>
-  orderIncrement=<span class="nu0">2</span>,           <span class="co1">// 6 obsoleto desde la versión 7.2 </span> 
-  pathSeparator=<span class="st0">"/"</span>           <span class="co1">// 7</span>
-<span class="br0">)</span></pre>
+  orderIncrement=<span class="nu0">2</span>,           <span class="co1">// 6  Obsoleto desde la versión 7.2 </span> 
+  pathSeparator=<span class="st0">"/"</span>           <span class="co1">// 7</span><br>  allowMoveNodes<span
+class="st0"></span>=<span class="kw4">true </span>        <span class="co1">// 8  Nuevo en v7.5</span><br><span
+class="br0">)</span></pre>
       <ol>
         <li><span style="background-color: #ffffff;"><strong>forViews</strong>:
             Indica las vistas para la que aplica.</span></li>
@@ -18621,6 +18622,10 @@ class="sy0">&gt;</span> elementos<span class="sy0">;</span></pre>
         <li><span style="background-color: #ffffff;"><strong>pathSeparator</strong>:
             Separador utilizado en la ruta que define cada uno de los elementos
             del árbol y su ubicación.</span></li>
+        <li><strong>allowMoveNodes</strong>:<span>&nbsp;</span><em>(Nuevo en
+            v7.5)</em><span> Indica si el usuario puede mover nodos en el árbol.
+            Si se establece en <i>false</i>, los usuarios no podrán mover nodos
+            mediante arrastrar y soltar. El valor predeterminado es <i>true</i></span>.</li>
       </ol>
       <h3 id="toc38"><a name="Vista-Personalizacion+de+coleccion-Propiedades+de+total+(nuevo+en+v4.3)"></a>Propiedades
         de total <em>(nuevo en v4.3)</em></h3>
