@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- New allowMoveNodes attribute in @Tree annotation to disable drag & drop to move nodes in the tree.
 - Custom JPA EntityManagerFactory creation with entityManagerFactoryProviderClass in xava.properties.
 - default-controllers-ext.xml / controladores-defecto-ext.xml to define controllers in libraries/frameworks.
 - All Java code of openxava core framework converted to UTF-8 encoding.
